# mne-nodes_mne-functions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mne_functions/: __init__.py  _generate_mne_config.py  missing_types.json  mne_functions_config.json
tests/: run_function_node_audit.py
