[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mne-nodes_mne-functions"
description = "This is a module scraping all functions and instantiatable classes from mne-python."
requires-python = ">=3.11"
dependencies = [
    "mne",
]
dynamic = ["version"]
readme = "README.md"
license = "BSD-3-Clause"

[project.entry-points."mne_nodes.plugins"]
mne_functions = "mne_functions"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.ruff]
line-length = 88
fix = true
show-fixes = true
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true